--- a/.env.example
+++ b/.env.example
@@ -37,3 +37,9 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+# TO DO: POPULATE
+SHOPIFY_API_KEY=
+SHOPIFY_API_SECRET=
+SHOPIFY_SHOP_DOMAIN=
+SHOPIFY_ACCESS_TOKEN=
